PurchaseActivity and ExpenseActivity completed. Database schema modifications.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,7 +28,15 @@
             android:name=".ProductActivity"
             android:label="@string/title_activity_product"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".NewProductActivity"></activity>
+        <activity
+            android:name=".NewProductActivity"
+            android:label="@string/title_activity_new_product"/>
+        <activity
+            android:name=".PurchaseActivity"
+            android:label="@string/title_activity_purchase"/>
+        <activity
+            android:name=".ExpenseActivity"
+            android:label="@string/title_activity_expense"/>
     </application>
 
 </manifest>
